Fix name height on mobile

--- a/src/app/directory/directory.component.css
+++ b/src/app/directory/directory.component.css
@@ -210,6 +210,10 @@ label span {
     display: block;
     text-align: center;
   }
+
+  .name-container {
+    height: auto;
+  }
   
   .title {
     margin-bottom: 10px;
